[gd_scene load_steps=16 format=2]

[ext_resource path="res://prefabs/Interactables/InteractableNoPreset.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Items/LandClaim.gd" type="Script" id=2]
[ext_resource path="res://prefabs/UI/Context.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/UI/ItemContext_Description.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/UI/ItemContext_Equip.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/UI/ItemContext_Discard.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/objects/Sign.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Materials/basic_wood_02.tres" type="Material" id=8]
[ext_resource path="res://Sprites/misc/flyer_01.png" type="Texture" id=9]
[ext_resource path="res://Shaders/screentoneShader.tres" type="Material" id=10]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0, 4.78888, -0.33956, 0, -0.656244, -0.322878, 0.322941, 4.78888, -0.10493, 0.307075, -0.656244, -0.099775, 0.322941, 4.78888, -0.10493, 0.307075, -0.656244, -0.099775, 0.199588, 4.78888, 0.27471, 0.189783, -0.656244, 0.261214, 0.199588, 4.78888, 0.27471, 0.189783, -0.656244, 0.261214, -0.199588, 4.78888, 0.27471, -0.189783, -0.656244, 0.261214, 0, 4.78888, -0.33956, 0.322941, 4.78888, -0.10493, -0.322941, 4.78888, -0.10493, -0.199588, 4.78888, 0.27471, 0.199588, 4.78888, 0.27471, -0.199588, 4.78888, 0.27471, -0.189783, -0.656244, 0.261214, -0.322941, 4.78888, -0.10493, -0.307075, -0.656244, -0.099775, -0.322941, 4.78888, -0.10493, -0.307075, -0.656244, -0.099775, 0, 4.78888, -0.33956, 0, -0.656244, -0.322878, 0.307075, -0.656244, -0.099775, 0, -0.656244, -0.322878, 0.189783, -0.656244, 0.261214, -0.189783, -0.656244, 0.261214, -0.307075, -0.656244, -0.099775, 0.119554, 3.13451, -1.32038, 0.119554, 3.08094, -1.34877, 0.431513, 3.13451, -1.32038, 0.431513, 3.08094, -1.34877, 0.119554, 3.08094, -1.34877, 0.119554, 2.72106, -1.34877, 0.431513, 3.08094, -1.34877, 0.431513, 2.72106, -1.34877, 0.020654, 4.60054, -0.880394, 0.332613, 4.60054, -0.880394, 0.119554, 4.59852, 1.47259, 0.431513, 4.59852, 1.47259, 0.119554, 3.02566, -1.02439, 0.119554, 2.97208, -1.02439, 0.119554, 3.13451, -1.32038, 0.119554, 3.08094, -1.34877, 0.431513, 3.02566, -0.86945, 0.431513, 2.90305, -0.86945, 0.431513, 3.02566, 1.18738, 0.431513, 2.97208, 1.34877, 0.119554, 2.72106, -1.02439, 0.119554, 2.72106, -1.34877, 0.431513, 4.59852, 1.47259, 0.431513, 4.35221, 1.47259, 0.119554, 4.59852, 1.47259, 0.119554, 4.35221, 1.47259, 0.431513, 2.97208, 1.34877, 0.431513, 2.79009, 1.34877, 0.119554, 2.97208, 1.34877, 0.119554, 2.79009, 1.34877, 0.431513, 2.72106, -0.86945, 0.119554, 2.72106, -0.86945, 0.431513, 2.79009, 1.34877, 0.119554, 2.79009, 1.34877, 0.332613, 4.60054, -0.880394, 0.332613, 4.35423, -0.880394, 0.431513, 4.59852, 1.47259, 0.431513, 4.35221, 1.47259, 0.020654, 4.60054, -1.07086, 0.020654, 4.35423, -1.35971, 0.332613, 4.60054, -1.07086, 0.332613, 4.35423, -1.35971, 0.431513, 2.72106, -0.86945, 0.431513, 2.79009, 1.34877, 0.020654, 4.60054, -1.03533, 0.119554, 4.35423, -1.02439, 0.020654, 4.60054, -1.07086, 0.020654, 4.35423, -1.35971, 0.431513, 3.02566, 1.18738, 0.431513, 2.97208, 1.34877, 0.119554, 3.02566, 1.18738, 0.119554, 2.97208, 1.34877, 0.119554, 3.07651, -1.02439, 0.119554, 3.18537, -1.34877, 0.119554, 3.18537, -1.34877, 0.119554, 3.13451, -1.32038, 0.431513, 3.18537, -1.34877, 0.431513, 3.13451, -1.32038, 0.431513, 3.07651, -0.86945, 0.431513, 3.07651, 1.34877, 0.431513, 3.07651, 1.34877, 0.431513, 3.02566, 1.18738, 0.119554, 3.07651, 1.34877, 0.119554, 3.02566, 1.18738, 0.119554, 4.35423, -1.02439, 0.119554, 4.30473, -1.02439, 0.020654, 4.35423, -1.35971, 0.020654, 4.30473, -1.35971, 0.020654, 4.35423, -1.35971, 0.020654, 4.30473, -1.35971, 0.332613, 4.35423, -1.35971, 0.332613, 4.30473, -1.35971, 0.332613, 4.35423, -0.880394, 0.332613, 4.30473, -0.880394, 0.431513, 4.35221, 1.47259, 0.431513, 4.30271, 1.31221, 0.431513, 4.35221, 1.47259, 0.431513, 4.30271, 1.31221, 0.119554, 4.35221, 1.47259, 0.119554, 4.30271, 1.31221, 0.431513, 4.30271, 1.31221, 0.431513, 4.24101, 1.47259, 0.119554, 4.30271, 1.31221, 0.119554, 4.24101, 1.47259, 0.332613, 4.30473, -0.880394, 0.332613, 4.24302, -0.880394, 0.431513, 4.30271, 1.31221, 0.431513, 4.24101, 1.47259, 0.020654, 4.30473, -1.35971, 0.020654, 3.89058, -1.29004, 0.332613, 4.30473, -1.35971, 0.332613, 3.89058, -1.29004, 0.119554, 4.30473, -1.02439, 0.119554, 4.24302, -1.02439, 0.020654, 4.30473, -1.35971, 0.020654, 3.89058, -1.29004, 0.119554, 4.24302, -1.02439, 0.119554, 3.07651, -1.02439, 0.020654, 3.89058, -1.29004, 0.119554, 3.18537, -1.34877, 0.020654, 3.89058, -1.29004, 0.119554, 3.18537, -1.34877, 0.332613, 3.89058, -1.29004, 0.431513, 3.18537, -1.34877, 0.332613, 4.24302, -0.880394, 0.431513, 3.07651, -0.86945, 0.431513, 4.24101, 1.47259, 0.431513, 3.07651, 1.34877, 0.431513, 4.24101, 1.47259, 0.431513, 3.07651, 1.34877, 0.119554, 4.24101, 1.47259, 0.119554, 3.07651, 1.34877, 0.332613, 4.24302, -0.963748, 0.431513, 3.07651, -0.952804, 0.332613, 4.24302, -0.880394, 0.431513, 3.07651, -0.86945, 0.119554, 4.24101, 1.47259, 0.119554, 3.07651, 1.34877, 0.119554, 4.24302, -0.86945, 0.119554, 3.07651, -0.86945, 0.119554, 4.30271, 1.31221, 0.119554, 4.30473, -0.86945, 0.332613, 4.30473, -0.963748, 0.332613, 4.24302, -0.963748, 0.332613, 4.30473, -0.880394, 0.332613, 4.24302, -0.880394, 0.332613, 4.35423, -0.963748, 0.332613, 4.35423, -0.880394, 0.119554, 4.35221, 1.47259, 0.119554, 4.30271, 1.31221, 0.020654, 4.35423, -0.880394, 0.119554, 4.30473, -0.86945, 0.431513, 3.07651, -0.952804, 0.431513, 3.02566, -0.952804, 0.119554, 3.02566, 1.18738, 0.119554, 3.02566, -0.86945, 0.119554, 4.59852, 1.47259, 0.119554, 4.35221, 1.47259, 0.020654, 4.60054, -0.880394, 0.020654, 4.35423, -0.880394, 0.431513, 2.97208, -0.952804, 0.431513, 2.73291, -0.952804, 0.332613, 4.48731, -0.963748, 0.332613, 4.60054, -0.880394, 0.431513, 2.73291, -0.952804, 0.119554, 2.73291, -0.952804, 0.431513, 2.72106, -0.86945, 0.119554, 2.72106, -0.86945, 0.119554, 2.97208, 1.34877, 0.119554, 2.79009, 1.34877, 0.119554, 2.90305, -0.86945, 0.119554, 2.72106, -0.86945, 0.020654, 4.48731, -0.963748, 0.332613, 4.48731, -0.963748, 0.020654, 4.60054, -0.880394, 0.332613, 4.60054, -0.880394, 0.020654, 4.60054, -1.03533, 0.332613, 4.60054, -1.03533, 0.020654, 4.48731, -0.963748, 0.332613, 4.48731, -0.963748, 0.431513, 3.02566, -1.02439, 0.431513, 2.97208, -1.02439, 0.431513, 2.72106, -1.02439, 0.119554, 2.72106, -1.02439, 0.431513, 2.73291, -0.952804, 0.119554, 2.73291, -0.952804, 0.332613, 4.60054, -1.03533, 0.332613, 4.35423, -1.03533, 0.431513, 2.72106, -1.02439, 0.431513, 3.07651, -1.02439, 0.332613, 4.30473, -1.03533, 0.332613, 4.24302, -1.03533, 0.332613, 4.24302, -1.03533, 0.431513, 3.07651, -1.02439, 0.119554, 4.24302, -0.952804, 0.119554, 3.07651, -0.952804, 0.119554, 4.30473, -0.952804, 0.020654, 4.35423, -0.880394, 0.119554, 4.30473, -0.86945, 0.119554, 4.35423, -0.952804, 0.119554, 4.30473, -0.952804, 0.119554, 3.02566, -0.952804, 0.020654, 4.60054, -0.880394, 0.020654, 4.35423, -0.880394, 0.020654, 4.48731, -0.963748, 0.119554, 4.35423, -0.952804, 0.119554, 2.97208, -0.952804, 0.119554, 2.73291, -0.952804, 0.332613, 3.89058, -1.29004, 0.431513, 3.18537, -1.34877, 0.332613, 4.24302, -1.03533, 0.431513, 3.07651, -1.02439, 0.332613, 4.30473, -1.35971, 0.332613, 3.89058, -1.29004, 0.332613, 4.35423, -1.35971, 0.431513, 3.18537, -1.34877, 0.431513, 3.13451, -1.32038, 0.431513, 3.08094, -1.34877, 0.431513, 2.72106, -1.34877, 0.332613, 4.60054, -1.07086, 0.431513, 2.72106, -1.34877, 0.119554, 2.72106, -1.34877, 0.431513, 2.72106, -1.02439, 0.119554, 2.72106, -1.02439, 0.020654, 4.60054, -1.07086, 0.332613, 4.60054, -1.07086, 0.020654, 4.60054, -1.03533, 0.332613, 4.60054, -1.03533, 0.119554, 4.24302, -1.02439, 0.119554, 4.30473, -1.02439, 0.119554, 4.35423, -0.952804, 0.119554, 4.35423, -1.02439, 0.020654, 4.48731, -0.963748, 0.119554, 4.35423, -0.952804, 0.020654, 4.60054, -1.03533, 0.119554, 4.35423, -1.02439 )

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_texture = ExtResource( 9 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=5]

[node name="LandClaim" type="RigidBody"]
mode = 1
script = ExtResource( 2 )

[node name="Interactable" parent="." instance=ExtResource( 1 )]
playSoundOnInteract = false
prompt = "Equip"

[node name="CollisionShape3" type="CollisionShape" parent="Interactable"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Context" parent="." instance=ExtResource( 3 )]

[node name="Description" parent="Context" instance=ExtResource( 4 )]
description = "A stakable claim to some land. Equip to place."

[node name="Equip" parent="Context" instance=ExtResource( 5 )]
visible = false

[node name="Discard" parent="Context" instance=ExtResource( 6 )]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -1.30256e-07, 0, 0.799505, 0, 0.799505, 0, -0.799505, 0, -1.30256e-07, 0.186689, 1.43038, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="BoundingBox" type="Area" parent="."]
transform = Transform( 43.3714, 0, 0, 0, 43.3714, 0, 0, 0, 43.3714, 0, 18.5907, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BoundingBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 43.3714, 0, 0, 0, 43.3714, 0, 0, 0, 43.3714, 0, 18.5907, 0 )
mesh = SubResource( 5 )
material/0 = ExtResource( 10 )
[connection signal="interaction" from="Interactable" to="." method="_on_Interactable_interaction"]
[connection signal="body_entered" from="BoundingBox" to="." method="_on_BoundingBox_body_entered"]
[connection signal="body_exited" from="BoundingBox" to="." method="_on_BoundingBox_body_exited"]

[editable path="Interactable"]
